# s3cpp

./: .clang-tidy  LICENSE.txt  README.md  meson.build  meson.format  meson.options  pyproject.toml
.github/workflows/: format.yml  lint.yml  rockylinux.yml
include/: meson.build
include/s3cpp/: meta.hpp
include/s3cpp/aws/: scope.hpp
include/s3cpp/aws/iam/: canonicalize.hpp  session.hpp  sign_request.hpp  string_to_sign.hpp  urlencode.hpp
include/s3cpp/aws/s3/: client.hpp  session.hpp  types.hpp
include/s3cpp/internal/: macro-begin.hpp  macro-end.hpp
lib/: meson.build
lib/aws/: meson.build
lib/aws/iam/: canonicalize.cpp  meson.build  sign_request.cpp  string_to_sign.cpp  urlencode.cpp
lib/aws/s3/: client.cpp  dns_cache.cpp  dns_cache.hpp  meson.build  session.cpp  session_extra.cpp  session_extra.hpp  types.cpp
lib/aws/s3/client/: list_buckets.cpp  list_objects.cpp  meson.build
src/tools/: meson.build
src/tools/list_all_objects/: README.md  list_all_objects.cpp  meson.build  misc.hpp  worker.cpp  worker.hpp  worker_manager.cpp  worker_manager.hpp
subprojects/: .gitignore  boost.wrap  botan.wrap
subprojects/bindings-python/: meson.build  meson.options
subprojects/bindings-python/lib/: common.hpp  internal.hpp  meson.build  s3cpp.cpp
subprojects/bindings-python/lib/aws/: aws.cpp  aws.hpp  meson.build
subprojects/bindings-python/lib/aws/iam/: iam.cpp  iam.hpp  meson.build
subprojects/bindings-python/lib/aws/s3/: meson.build  s3.cpp  s3.hpp
subprojects/bindings-python/stubs/: meson.build
subprojects/bindings-python/stubs/aws/: meson.build
subprojects/bindings-python/stubs/aws/iam/: meson.build
subprojects/bindings-python/stubs/aws/s3/: meson.build
subprojects/packagefiles/: botan.patch
test/: meson.build
test/aws/: enc.cpp  iam.cpp  iam2.cpp  meson.build
