[project]
name = 's3cpp'
description = "A helper library to implement the Gentoo Package Manager Specification"
dynamic = ['version']
dependencies = ["typing-extensions; python_version < '3.11'"]
requires-python = '>= 3.9'

[project.urls]
source = "https://github.com/Jannik2099/s3cpp"

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', "typing-extensions; python_version < '3.11'"]

[tool.meson-python.args]
install = ['--tags=runtime,python-runtime']
dist = ['--include-subprojects']
